--- a/apps/main-app/src/styles/globals.css
+++ b/apps/main-app/src/styles/globals.css
@@ -1,8 +1,4 @@
-@custom-variant dark (&:is(.dark *));
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 html,
 body {
